regex exercises up to any/none of

--- a/regex_lesson.ipynb
+++ b/regex_lesson.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,14 +80,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "regexp = r'a'\n",
+    "regexp = r'.'\n",
     "subject = 'abc'\n",
     "\n",
-    "re.search(regexp, subject)"
+    "#re.search(regexp, subject)\n",
+    "re.findall(regexp, subject)"
    ]
   },
   {
@@ -113,22 +125,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "1. Changing from a to b I notice a change in the span from (0,1) to (1,2) and a change in the match from a to b\n",
+    "2. Changing regexp to ab the span changes to (0,2)\n",
+    "3. Changing regexp to literal d I notice no output\n",
+    "4. Changing to re.findall an open bracket is returned in the output\n",
+    "5. The results for changing to the \".\" character are: ['a', 'b', 'c']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Metacharacters\n",
     "\n",
-    "- `.`\n",
-    "- `\\w`\n",
-    "- `\\s`\n",
-    "- `\\d`\n",
-    "- Captial variants"
+    "- `.`: anything\n",
+    "- `\\w`: alphanumeric\n",
+    "- `\\s`: whitespace\n",
+    "- `\\d`: numbers\n",
+    "- Captial variants: anything thats not described by lowercase variant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 1), match='a'>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "regexp = r'\\w'\n",
+    "regexp = r'\\w' #look for anything thats a-z 0-9 or underscore\n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.search(regexp, subject) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(3, 4), match=' '>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'\\s' \n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.search(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(4, 5), match='1'>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'\\d' \n",
     "subject = 'abc 123'\n",
     "\n",
     "re.search(regexp, subject)"
@@ -156,13 +236,258 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Repeating\n",
+    "#### 1. Use all of the above metacharacters with re.findall. What do you notice?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# .\n",
+    "regexp = r'\\.' \n",
+    "subject = 'abc 123'\n",
     "\n",
-    "- `{}`\n",
-    "- `*`\n",
-    "- `+`\n",
-    "- `?`\n",
-    "- greedy + non-greedy"
+    "re.findall(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c', '1', '2', '3']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#w\n",
+    "regexp = r'\\w' \n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.findall(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' ']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#s\n",
+    "regexp = r'\\s' \n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.findall(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '3']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#d\n",
+    "regexp = r'\\d' \n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.findall(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. What does the regular expression \\w\\w match?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ab', '12']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'\\w\\w' \n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.findall(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Use only metacharacters to write a regular expression to match \"c 1\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c 1']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'\\w\\s\\d' \n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.findall(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Use a combination of metacharacters to match 3 digits in a row."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['123']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'\\d\\d\\d' \n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.findall(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Repeating\n",
+    "* modifies whatever comes before them\n",
+    "- `{}`: specific number of repetitions\n",
+    "- `*`: zero or more\n",
+    "    - matching text that might have a lot of whitespace in it\n",
+    "- `+`: means one or more\n",
+    "- `?`: optional, whatever comes before the quesiton mark is optional\n",
+    "    - abcd? will match abc\n",
+    "- greedy + non-greedy: \n",
+    "    - greedy: tries to match as much as it can\n",
+    "    - non-greedy: ? says make you match non greedily, match as little as possible give the criteria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 3), match='abc'>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#one or more word characters\n",
+    "regexp = r'\\w+'\n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.search(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 7), match='abc 123'>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#match as much as you possibly can\n",
+    "regexp = r'.+\\d'\n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.search(regexp, subject)"
    ]
   },
   {
@@ -171,7 +496,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regexp = r'\\w+'\n",
+    "regexp = r'\\w{2,5}'\n",
     "subject = 'abc 123'\n",
     "\n",
     "re.search(regexp, subject)"
@@ -193,6 +518,101 @@
     "        <li>Write a regular expression that matches any urls in the subject.</li>\n",
     "    </ol>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subject = 'Codeup, founded in 2014, is located at 600 Navarro St. Suite 350, San Antonio, TX 78230. You can find us online at http://codeup.com and our alumni portal is located at https://alumni.codeup.com.'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Write a regular expression that matches all the numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2014', '600', '350', '78230']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#any sequence of one or more digits\n",
+    "regexp = r'\\d+'\n",
+    "re.findall(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Write a regular expression that matches a 5 digit number, but not a number with fewer digits."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(82, 87), match='78230'>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'\\d{5}'\n",
+    "re.search(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Write a regular expression that matches any urls in the subject."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['http://codeup.com', 'https://alumni.codeup.com']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#make the s optional, one or more of anything up to a space character\n",
+    "regexp = r'https?://.+?com'\n",
+    "re.findall(regexp, subject)"
    ]
   },
   {
@@ -280,6 +700,34 @@
     "        <li>Write a regular expression that matches if a word starts <b>and</b> ends with a capital letter.</li>\n",
     "    </ol>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Write a regular expression that matches if a word starts with a vowel."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Write a regular expression that matches if a word starts with a capital letter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Write a regular expression that matches if a word ends with a capital letter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Write a regular expression that matches if a word starts and ends with a capital letter."
    ]
   },
   {
