regular expressions through anchors

--- a/regex_lesson.ipynb
+++ b/regex_lesson.ipynb
@@ -623,12 +623,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "regexp = r'[a1][b2][c3]'\n",
+    "- The square brackets in a regular expression represent a single character that will match any of the values within the square brackets. For example, [ab] will match either an 'a' or a 'b'.\n",
+    "- If the first character inside of the square brackets is a caret, ^, then anything that is not inside of the square brackets will be matched. For example, [^ab] will match any character that is neither 'a' nor 'b'.\n",
+    "- Inside of square brackets, ranges of letters and numbers can be abbreviated with a hypen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 1), match='a'>"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'[^2-6]'#anything except for the numbers 2-6\n",
     "subject = 'abc 123'\n",
     "\n",
     "re.match(regexp, subject)"
@@ -636,10 +656,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 2), match='12'>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "regexp = r'[^c3]+' #anything thats not c or 3\n",
+    "subject = '123abc'\n",
+    "\n",
+    "re.match(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 3), match='123'>"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'[a1][b2][c3]' \n",
     "subject = '123abc'\n",
     "\n",
     "re.match(regexp, subject)"
@@ -666,19 +721,180 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Anchors\n",
-    "\n",
-    "- `^`\n",
-    "- `$`"
+    "#### 1. Write a regular expression that matches even numbers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2', '4', '6']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'[02468]' \n",
+    "subject = '123456'\n",
+    "\n",
+    "re.findall(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Write a regular expression that matches 2 or more odd numbers in a row."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['133']"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'[13579]{2,}' #2, is two or more, 1, is same as a plus\n",
+    "subject = '133'\n",
+    "\n",
+    "re.findall(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Write a regular expression that any word with a vowel in it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
+    "regexp = r'[aeiou\\.]' \n",
+    "subject = 'codeup'\n",
+    "\n",
+    "re.match(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found a vowel!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# can use regex as boolean value\n",
+    "regexp = r'[aeiou]' \n",
+    "subject = 'codeup'\n",
+    "\n",
+    "if re.search(regexp, subject):\n",
+    "    print('found a vowel!')\n",
+    "else:\n",
+    "    print('no vowels')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Anchors\n",
+    "\n",
+    "- `^`: starts with\n",
+    "- `$`: ends with"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(1, 2), match='b'>"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "regexp = r'b'\n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.search(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regexp = r'^b' #does the subject start with b\n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.search(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regexp = r'[a-z]$' #does the subject have a-z at end\n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.search(regexp, subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(6, 7), match='3'>"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'\\d$' #does the subject end with a digit\n",
     "subject = 'abc 123'\n",
     "\n",
     "re.search(regexp, subject)"
@@ -710,10 +926,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 1), match='a'>"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'^[aeiou]' \n",
+    "subject = 'abc 123'\n",
+    "\n",
+    "re.search(regexp, subject)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 2. Write a regular expression that matches if a word starts with a capital letter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 1), match='C'>"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'^[A-Z]' \n",
+    "subject = 'Codeup'\n",
+    "\n",
+    "re.search(regexp, subject)"
    ]
   },
   {
@@ -724,10 +986,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(4, 5), match='P'>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'[A-Z]$' \n",
+    "subject = 'bLooP'\n",
+    "\n",
+    "re.search(regexp, subject)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. Write a regular expression that matches if a word starts and ends with a capital letter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regexp = r'^[A-Z]$' \n",
+    "subject = 'CooL'\n",
+    "\n",
+    "re.search(regexp, subject)"
    ]
   },
   {
