regex through capture groups

--- a/regex_lesson.ipynb
+++ b/regex_lesson.ipynb
@@ -1017,11 +1017,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 4), match='CooL'>"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "regexp = r'^[A-Z]$' \n",
+    "regexp = r'^[A-Z].*[A-Z]$' \n",
     "subject = 'CooL'\n",
     "\n",
     "re.search(regexp, subject)"
@@ -1031,14 +1042,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Capture Groups"
+    "### Capture Groups\n",
+    "- wrapping any part of regulare expression in () creates a capture group"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0\n",
+       "0  NaN\n",
+       "1  123\n",
+       "2  123"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "regexp = '.*?(\\d+)'\n",
     "s = pd.Series(['abc', 'abc123', '123'])\n",
@@ -1057,14 +1122,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abc'"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#removing any sequence of digits from this string\n",
     "regexp = r'\\d+'\n",
     "subject = 'abc123'\n",
     "\n",
     "re.sub(regexp, '', subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'123abc'"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#one or more of a-z and one or more digits\n",
+    "#two capture groups a-z and digits, saying substitute contents of the subject with the \n",
+    "#second capture group\n",
+    "regexp = r'([a-z]+)(\\d+)'\n",
+    "subject = 'abc123'\n",
+    "\n",
+    "re.sub(regexp, r'\\2\\1', subject)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    \n",
+       "1    \n",
+       "2    \n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "s.str.replace(r'.*(\\d.)*', r'\\1', regex=True)"
    ]
   },
   {
@@ -1079,6 +1206,53 @@
     "    <pre><code>dates = pd.Series(['2020-11-12', '2020-07-13', '2021-01-12'])</code></pre>\n",
     "    <p>Use regular expression substitution to reformat the dates in the format common in the US: m/d/y.</p>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2020-11-12\n",
+       "1    2020-07-13\n",
+       "2    2021-01-12\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates = pd.Series(['2020-11-12', '2020-07-13', '2021-01-12'])\n",
+    "dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    11/12/2020\n",
+       "1    07/13/2020\n",
+       "2    01/12/2021\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates.str.replace(r'(\\d{4})-(\\d{2})-(\\d{2})', r'\\2/\\3/\\1', regex=True)"
    ]
   },
   {
