exercise requirements added to notebook

--- a/acquire_codeup_blog.ipynb
+++ b/acquire_codeup_blog.ipynb
@@ -1,6 +1,52 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NLP Acquire Codeup Blog Articles Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By the end of this exercise, you should have a file named acquire.py that contains the specified functions. If you wish, you may break your work into separate files for each website (e.g. acquire_codeup_blog.py and acquire_news_articles.py), but the end function should be present in acquire.py (that is, acquire.py should import get_blog_articles from the acquire_codeup_blog module.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Codeup Blog Articles\n",
+    "- Scrape the article text from the following pages:\n",
+    "    - https://codeup.com/codeups-data-science-career-accelerator-is-here/\n",
+    "    - https://codeup.com/data-science-myths/\n",
+    "    - https://codeup.com/data-science-vs-data-analytics-whats-the-difference/\n",
+    "    - https://codeup.com/10-tips-to-crush-it-at-the-sa-tech-job-fair/\n",
+    "    - https://codeup.com/competitor-bootcamps-are-closing-is-the-model-in-danger/\n",
+    "- Encapsulate your work in a function named get_blog_articles that will return a list of dictionaries, with each dictionary representing one article. The shape of each dictionary should look like this:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{\n",
+    "    'title': 'the title of the article',\n",
+    "    'content': 'the full text content of the article'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bonus:\n",
+    "- Scrape the text of all the articles linked on codeup's blog page."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
