acquire news articles exercise notebook created

--- a/acquire_news_articles.ipynb
+++ b/acquire_news_articles.ipynb
@@ -15,6 +15,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. News Articles\n",
+    "- We will now be scraping text data from inshorts, a website that provides a brief overview of many different topics.\n",
+    "- Write a function that scrapes the news articles for the following topics:\n",
+    "    - Business\n",
+    "    - Sports\n",
+    "    - Technology\n",
+    "    - Entertainment\n",
+    "- The end product of this should be a function named get_news_articles that returns a list of dictionaries, where each dictionary has this shape:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{\n",
+    "    'title': 'The article title',\n",
+    "    'content': 'The article content',\n",
+    "    'category': 'business' # for example\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hints:\n",
+    "- Start by inspecting the website in your browser. Figure out which elements will be useful.\n",
+    "- Start by creating a function that handles a single article and produces a dictionary like the one above.\n",
+    "- Next create a function that will find all the articles on a single page and call the function you created in the last step for every article on the page.\n",
+    "- Now create a function that will use the previous two functions to scrape the articles from all the pages that you need, and do any additional processing that needs to be done."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bonus:  cache the data\n",
+    "- Write your code such that the acquired data is saved locally in some form or fashion. Your functions that retrieve the data should prefer to read the local data instead of having to make all the requests everytime the function is called. Include a boolean flag in the functions to allow the data to be acquired \"fresh\" from the actual sources (re-writing your local cache)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
